<resources>

    <string name="app_name">Color Memory</string>

    <!-- activity_main -->
    <string name="Page_Connexion">Connecte toi pour jouer !</string>
    <string name="Inscription2">Si tu n as pas de compte, inscris toi !</string>
    <string name="Email"> </string>
    <string name="Password"> </string>
    <string name="Connexion">Connecte toi !</string>
    <string name="Inscription">Inscris toi !</string>
    <string name="Information">Aide</string>

    <!-- layout_color_game -->
    <string name="Start">Start</string>
    <string name="Round">Round :</string>
    <string name="Score">Score :</string>
    <string name="Level">Level :</string>
    <string name="Life">Vie :</string>
    <string name="Mode">Mode :</string>
    <string name="Jeu1"> </string>
    <string name="Jeu2"> </string>
    <string name="Jeu3"> </string>
    <string name="Jeu4"> </string>
    <string name="Jeu5"> </string>
    <string name="Jeu6"> </string>
    <string name="Jeu7"> </string>
    <string name="Jeu8"> </string>
    <string name="Jeu9"> </string>
    <string name="Jeu10"> </string>
    <string name="B_Difficulty">Retour</string>



    <!-- layout_difficulty -->
    <string name="Mode_Easy">Mode Facile</string>
    <string name="Mode_Difficult">Mode Difficile</string>
    <string name="Mode_Expert">Mode Expert</string>
    <string name="Mode_Chrono">Mode Chrono</string>
    <string name="Name2"> Prénom : </string>


    <!-- layout_inscription -->
    <string name="Page_Inscription">Inscris toi pour jouer !</string>
    <string name="First_Name"> </string>
    <string name="Last_Name"> </string>
    <string name="Woman">Femme</string>
    <string name="Man">Homme</string>
    <string name="Birth"> </string>
    <string name="B_Inscription">Inscription</string>
    <string name="B_Back">Retour</string>

    <!-- layout_information -->
    <string name="ModeF">   Le nombre de blocs éclairés démarre de 1 jusqu à 10.
                            Il n y a pas de temps de réponse.
                            Vous avez 2 vies. </string>
    <string name="ModeD">   Le nombre de blocs éclairés démarre de 3 jusqu à 15.
                            Il n y a pas de temps de réponse.
                            Vous avez 2 vies. </string>
    <string name="ModeE">   Le nombre de blocs éclairés démarre de 5 jusqu à 20.
                            Il n y a pas de temps de réponse.
                            Vous avez 3 vies. </string>
    <string name="ModeC">   Le nombre de blocs éclairés démarre de 1 jusqu à l infini.
                            Le temps de réponse est limité à 3 secondes par bloc coloré à reproduire.
                            Vous avez 3 vies. </string>

</resources>