<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f15d36e9e4395babdcb69ccfab745c2b">

    <TextView
        android:id="@+id/textView_Mf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mode_Easy"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Md"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mode_Difficult"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline35" />

    <TextView
        android:id="@+id/textView_Me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mode_Expert"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline34" />

    <TextView
        android:id="@+id/textView_Mc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mode_Chrono"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline40"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline36"
        app:layout_constraintVertical_bias="0.423" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <TextView
        android:id="@+id/textView_Mf1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/ModeF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />

    <TextView
        android:id="@+id/textView_Md1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/ModeD"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <TextView
        android:id="@+id/textView_Me1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/ModeE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline36"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/guideline39" />

    <TextView
        android:id="@+id/textView_Mc1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/ModeC"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toTopOf="@+id/guideline40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <Button
        android:id="@+id/button_backinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/B_Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toTopOf="@+id/guideline41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>